[tool.poetry]
name = "hs-research"
version = "0.1.0"
description = ""
authors = ["ninz <nreclarin@gmail.com>"]
readme = "README.md"
packages = [{include = "hs_research"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
scikit-image = "^0.21.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
